# Denc

./: .clangd  CMakeLists.txt  Makefile  README.md  build.ninja  buildW.ninja
include/: encrypt.h  global.h  thread_process.h
src/: encrypt.c  main.c  thread_process.c
